@@ -1,3 +1,8 @@
+2014-07-15  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: document deadlock avoidance for
+	fuse_notify_inval_entry() and fuse_notify_delete()
+
 2014-03-26  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Initilaize stat buffer passed to ->getattr() and ->fgetattr() to
